更新Model类以使用getDeclaredConstructor().newInstance()并添加异常处理，同时将readOnlyModelList字段设为公开且添加Getter注解